# simply-migrate

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  app_factory.py  callbacks.py  cli.py  main.py  worker.py
app/callback/: callback_context.py  callback_registry.py  callback_result.py  decorators.py  specs.py
app/migration/: classes.py  runner.py  validator.py
app/migration_queue/: register.py  state_management.py
app/migration_queue/tests/: test_state_management.py
app/models/: models.py
app/routers/: connection_manager.py  dependencies.py  healthcheck.py  job_runner.py  migrations.py
test_data/migration/: migration_1.json  migration_1.yaml
test_data/scenario_1/: V1.0__init_database.sql  V1.1__add_customers_table.sql  V1.2__add_addresses_table.sql  V1.3__link_customers_to_addresses.sql
