[project]
name = "simply-migration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.6.2",
    "fastapi[standard]>=0.128.0",
    "pluggy>=1.6.0",
    "psycopg2-binary>=2.9.11",
    "redis>=7.1.0",
    "sqlalchemy>=2.0.46",
]

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[project.scripts]
simply-migrate="app.cli:cli"
